# foot

./: Cargo.toml
src/: document.rs  editor.rs  main.rs  row.rs  terminal.rs
